Bug 287782 - <body> uses default white background even if <html> has background specified.
Summary: <body> uses default white background even if <html> has background specified.
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.8.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: 0.9
Assignee: Andrea Diamantini
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-28 19:29 UTC by GlitchMr
Modified: 2012-01-04 18:03 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description GlitchMr 2011-11-28 19:29:42 UTC
Version:           0.8.0 (using KDE 4.7.2) 
OS:                Linux

<body> uses default background, even if background was defined on <html> element. It doesn't happen in other browser which just consider the background transparent.

Reproducible: Always

Steps to Reproduce:
Testcase: http://testcases.glitchmr.pl/rekonq/

Actual Results:  
Part of site which contains <body> is white

Expected Results:  
Whole site should be green, including <body>.

I couldn't reproduce it in other browsers, even WebKit-based. Possibly it happens in Konqueror, but I'm too lazy to install it...
Comment 1 Blagovest Zlatev 2011-11-29 04:22:10 UTC
The bug is reproducible and not a duplicate.
Comment 2 Andrea Diamantini 2011-11-29 23:05:35 UTC
right! This (probably) depends on one fix we applied for some old qtwebkit releases, falling to show a blank background if there was no one specified.
Need investigation and properly fixes.
Thanks for the report, targetting 0.9.
Comment 3 Andrea Diamantini 2012-01-04 18:03:14 UTC
Git commit 3f3553ff77a5e429a4527a9ad2f7ff8863226161 by Andrea Diamantini.
Committed on 04/01/2012 at 19:04.
Pushed by adjam into branch 'master'.

Finally fix problems with unset background

WARNING: This fix works just with qtwebkit 2.2.x!!!

M  +3    -6    src/application.cpp
M  +1    -1    src/application.h
D  +0    -10   src/data/default_rekonq.css

http://commits.kde.org/rekonq/3f3553ff77a5e429a4527a9ad2f7ff8863226161