Finally fix problems with unset background

WARNING: This fix works just with qtwebkit 2.2.x!!!

BUG: 287782